# Reorg

./: .gitignore  Cargo.toml  Finance(July-September).md  README.md  Readme.md  WHITEPAPER.md  blog.txt  canister_ids.json  dfx.json  did.sh  package-lock.json  package.json  setup.sh
src/: tailwind.config.cjs
src/Quillo_backend/: Cargo.toml  Quillo_backend.did
src/Quillo_backend/src/: error_handler.rs  lib.rs
src/Quillo_backend/src/application/: mod.rs
src/Quillo_backend/src/articles/: mod.rs
src/Quillo_backend/src/company/: mod.rs
src/Quillo_backend/src/dao/: mod.rs
src/Quillo_backend/src/daoservice/: dao_methods.rs  mod.rs
src/Quillo_backend/src/icrc2/: cmc.rs  ledger.rs  ledger_types.rs  mod.rs  transactions.rs
src/Quillo_backend/src/icrc7_and_icrc37/: create_and_deploy_nft.rs  types.rs
src/Quillo_backend/src/types/: dao_methods.rs  icpts.rs  mod.rs
src/Quillo_backend/src/utils/: mod.rs
src/Quillo_frontend/: .d.ts  components.json  dummyTransactions.json  index.html  package.json  tailwind.config.js  vite.config.ts
src/Quillo_frontend/public/: animation.json
src/Quillo_frontend/public/.well-known/: ic-domains
src/Quillo_frontend/src/: App.css  App.tsx  main.tsx
src/Quillo_frontend/src/assets/: colors.tsx  icons.tsx
src/Quillo_frontend/src/components/: About.tsx  Animation.tsx  Ecosystems.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HeroCards.tsx  HowItWorks.tsx  Icons.tsx  JoinCommunity.tsx  Navbar.tsx  Newsletter.tsx  Pricing.tsx  Sponsors.tsx  Statistics.tsx  Team.tsx  Wallet.tsx  mode-toggle.tsx
(+116 files in other folders)
