[package]
name = "Quillo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
serde = "1.0.126"
serde_derive = "1.0.126"
ic-stable-structures = "0.5.6"
ic-cdk-macros= "0.14.0"

icrc-ledger-types= "0.1.5"





ic-ledger-types= "0.11.0"
candid-extractor = "0.1.4"
mint-cycles = "0.1.0"
